@@ -415,7 +415,7 @@
 			  <property name="overwrite">False</property>
 			  <property name="accepts_tab">False</property>
 			  <property name="justification">GTK_JUSTIFY_LEFT</property>
-			  <property name="wrap_mode">GTK_WRAP_NONE</property>
+			  <property name="wrap_mode">GTK_WRAP_WORD</property>
 			  <property name="cursor_visible">True</property>
 			  <property name="pixels_above_lines">0</property>
 			  <property name="pixels_below_lines">0</property>
@@ -970,7 +970,7 @@
 			      <property name="overwrite">False</property>
 			      <property name="accepts_tab">False</property>
 			      <property name="justification">GTK_JUSTIFY_LEFT</property>
-			      <property name="wrap_mode">GTK_WRAP_NONE</property>
+			      <property name="wrap_mode">GTK_WRAP_WORD</property>
 			      <property name="cursor_visible">True</property>
 			      <property name="pixels_above_lines">0</property>
 			      <property name="pixels_below_lines">0</property>
